# VIVID

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  SDL3App_usage_example.md  VIVID_重构报告.md  vcpkg.json
.github/workflows/: documentation.yaml
hello_sdl3/: CMakeLists.txt  migration_guide.md
hello_sdl3/source/: main.cpp
lib/: CMakeLists.txt
lib/include/vivid/app/: App.h  SDL3App.h  Schedule.h
lib/include/vivid/input/: camera_controller.h  input_system.h
lib/include/vivid/log/: README.md  log.h
lib/include/vivid/opengl/: GLErrorHandler.h
lib/include/vivid/opengl/buffer/: IndexBuffer.h  VertexArray.h
lib/include/vivid/opengl/shader/: Shader.h
lib/include/vivid/plugins/: DefaultPlugin.h
lib/include/vivid/render/: render_systems.h
lib/include/vivid/rendering/: render_component.h  render_plugin.h  render_system.h
lib/include/vivid/ui/: ui_system.h
lib/include/vivid/window/: window_systems.h
lib/source/app/: SDL3App.cpp  SDL3Main.cpp
lib/source/input/: input_system.cpp
lib/source/log/: log.cpp
lib/source/opengl/: GLErrorHandler.cpp
lib/source/opengl/buffer/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
lib/source/opengl/shader/: Shader.cpp
lib/source/plugins/: DefaultPlugin.cpp
lib/source/render/: render_systems.cpp
lib/source/rendering/: render_plugin.cpp  render_system.cpp
lib/source/ui/: ui_system.cpp
lib/source/window/: window_systems.cpp
res/shaders/: BlinnPhong.shader
src/: main.cpp
src/app/: App.h  Plugin.h  Schedule.h
src/components/: physics_components.h  rendering_components.h
src/core/: App.h  Resources.h
src/editor/: ComponentRegistry.cpp  ComponentRegistry.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  editor_plugin.cpp  editor_plugin.h
src/input/: camera_controller.h  input_system.cpp
src/opengl/: GLErrorHandler.cpp
src/opengl/buffer/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/opengl/shader/: Shader.cpp
src/physics/: physics_system.h
src/plugins/: DefaultPlugin.cpp  DefaultPlugin.h
src/rendering/: render_plugin.cpp  render_plugin.h  render_system.cpp  render_system.h
src/systems/: physics_system.h  renderer_system.cpp  renderer_system.h
standalone/: CMakeLists.txt
standalone/source/: main.cpp
standalone/source/editor/: ComponentRegistry.cpp  InspectorPanel.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  editor_plugin.cpp  editor_plugin.h
xr/: CMakeLists.txt
xr/common/: OpenXRDebugUtils.cpp  OpenXRHelper.h
xr/debugutil/: OpenXRDebugUtils.cpp
xr/source/: main.cpp
